added timeseries classification introduction

--- a/ECG_classification.ipynb
+++ b/ECG_classification.ipynb
@@ -1334,7 +1334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the post at https://machinelearningmastery.com/how-to-develop-rnn-models-for-human-activity-recognition-time-series-classification/ for a complete view of time series classification in Keras, with both RNNs and CNNs."
+    "See the post at https://machinelearningmastery.com/how-to-develop-rnn-models-for-human-activity-recognition-time-series-classification/ for a further view of time series classification in Keras, with both RNNs and CNNs mixed together. I just wanted to give the basic here, the possibilities to combine those 2 approaches are endless."
    ]
   },
   {
